libs/fitsio.h

    typedef __int64 LONGLONG;
    typedef long long LONGLONG;
    typedef __int64 LONGLONG;
    typedef long long LONGLONG;

typedef struct      /* structure used to store basic FITS file information */
{
    int filehandle;   /* handle returned by the file open function */
    int driver;       /* defines which set of I/O drivers should be used */
    int open_count;   /* number of opened 'fitsfiles' using this structure */
    char *filename;   /* file name */
    int validcode;    /* magic value used to verify that structure is valid */
    int only_one;     /* flag meaning only copy the specified extension */
    int noextsyntax;  /* flag for file opened with request to ignore extended syntax*/
    LONGLONG filesize; /* current size of the physical disk file in bytes */
    LONGLONG logfilesize; /* logical size of file, including unflushed buffers */
    int lasthdu;      /* is this the last HDU in the file? 0 = no, else yes */
    LONGLONG bytepos; /* current logical I/O pointer position in file */
    LONGLONG io_pos;  /* current I/O pointer position in the physical file */
    int curbuf;       /* number of I/O buffer currently in use */ 
    int curhdu;       /* current HDU number; 0 = primary array */
    int hdutype;      /* 0 = primary array, 1 = ASCII table, 2 = binary table */
    int writemode;    /* 0 = readonly, 1 = readwrite */
    int maxhdu;       /* highest numbered HDU known to exist in the file */
    int MAXHDU;       /* dynamically allocated dimension of headstart array */
    LONGLONG *headstart; /* byte offset in file to start of each HDU */
    LONGLONG headend;   /* byte offest in file to end of the current HDU header */
    LONGLONG ENDpos;    /* byte offest to where the END keyword was last written */
    LONGLONG nextkey;   /* byte offset in file to beginning of next keyword */
    LONGLONG datastart; /* byte offset in file to start of the current data unit */
    int imgdim;         /* dimension of image; cached for fast access */
    LONGLONG imgnaxis[99]; /* length of each axis; cached for fast access */
    int tfield;          /* number of fields in the table (primary array has 2 */
    int startcol;        /* used by ffgcnn to record starting column number */
    LONGLONG origrows;   /* original number of rows (value of NAXIS2 keyword)  */
    LONGLONG numrows;    /* number of rows in the table (dynamically updated) */
    LONGLONG rowlength;  /* length of a table row or image size (bytes) */
    tcolumn *tableptr;   /* pointer to the table structure */
    LONGLONG heapstart;  /* heap start byte relative to start of data unit */
    LONGLONG heapsize;   /* size of the heap, in bytes */

         /* the following elements are related to compressed images */

    /* these record the 'requested' options to be used when the image is compressed */
    int request_compress_type;  /* requested image compression algorithm */
    long request_tilesize[MAX_COMPRESS_DIM]; /* requested tiling size */
    float request_quantize_level;  /* requested quantize level */
    int request_quantize_method ;  /* requested  quantizing method */
    int request_dither_seed;     /* starting offset into the array of random dithering */
    int request_lossy_int_compress; /* lossy compress integer image as if float image? */
    int request_huge_hdu;          /* use '1Q' rather then '1P' variable length arrays */
    float request_hcomp_scale;     /* requested HCOMPRESS scale factor */
    int request_hcomp_smooth;      /* requested HCOMPRESS smooth parameter */

    /* these record the actual options that were used when the image was compressed */
    int compress_type;      /* type of compression algorithm */
    long tilesize[MAX_COMPRESS_DIM]; /* size of compression tiles */
    float quantize_level;   /* floating point quantization level */
    int quantize_method;   /* floating point pixel quantization algorithm */
    int dither_seed;      /* starting offset into the array of random dithering */

    /* other compression parameters */
    int compressimg; /* 1 if HDU contains a compressed image, else 0 */
    char zcmptype[12];      /* compression type string */
    int zbitpix;            /* FITS data type of image (BITPIX) */
    int zndim;              /* dimension of image */
    long znaxis[MAX_COMPRESS_DIM];  /* length of each axis */
    long maxtilelen;        /* max number of pixels in each image tile */
    long maxelem;	    /* maximum byte length of tile compressed arrays */

    int cn_compressed;	    /* column number for COMPRESSED_DATA column */
    int cn_uncompressed;    /* column number for UNCOMPRESSED_DATA column */
    int cn_gzip_data;       /* column number for GZIP2 lossless compressed data */
    int cn_zscale;	    /* column number for ZSCALE column */
    int cn_zzero;	    /* column number for ZZERO column */
    int cn_zblank;          /* column number for the ZBLANK column */

    double zscale;          /* scaling value, if same for all tiles */
    double zzero;           /* zero pt, if same for all tiles */
    double cn_bscale;       /* value of the BSCALE keyword in header */
    double cn_bzero;        /* value of the BZERO keyword (may be reset) */
    double cn_actual_bzero; /* actual value of the BZERO keyword  */
    int zblank;             /* value for null pixels, if not a column */

    int rice_blocksize;     /* first compression parameter: Rice pixels/block */
    int rice_bytepix;       /* 2nd compression parameter:   Rice bytes/pixel */
    float hcomp_scale;      /* 1st hcompress compression parameter */
    int hcomp_smooth;       /* 2nd hcompress compression parameter */

    int  *tilerow;          /* row number of the array of uncompressed tiledata */
    long *tiledatasize;     /* length of the array of tile data in bytes */
    int *tiletype;          /* datatype of the array of tile (TINT, TSHORT, etc) */
    void **tiledata;        /* array of uncompressed tile of data, for row *tilerow */
    void **tilenullarray;   /* array of optional array of null value flags */
    int *tileanynull;       /* anynulls in the array of tile? */

    char *iobuffer;         /* pointer to FITS file I/O buffers */
    long bufrecnum[NIOBUF]; /* file record number of each of the buffers */
    int dirty[NIOBUF];     /* has the corresponding buffer been modified? */
    int ageindex[NIOBUF];  /* relative age of each buffer */  
} FITSfile;


typedef struct         /* structure used to store basic HDU information */
{
    int HDUposition;  /* HDU position in file; 0 = first HDU */
    FITSfile *Fptr;   /* pointer to FITS file structure */
}fitsfile;


typedef struct
{
	/* input(s) */
	int count;
	char ** path;
	char ** tag;
	fitsfile ** ifptr;

	char * expression;

	/* output control */
	int bitpix;
	long blank;
	fitsfile * ofptr;
	char keyword[FLEN_KEYWORD];
	char comment[FLEN_COMMENT];
} PixelFilter;



int CFITS_API fits_pixel_filter (PixelFilter * filter, int * status);



/*--------------------- grouping routines ------------------*/

int CFITS_API ffgtcr(fitsfile *fptr, char *grpname, int grouptype, int *status);

int CFITS_API ffgtis(fitsfile *fptr, char *grpname, int grouptype, int *status);

int CFITS_API ffgtch(fitsfile *gfptr, int grouptype, int *status);

int CFITS_API ffgtrm(fitsfile *gfptr, int rmopt, int *status);

int CFITS_API ffgtcp(fitsfile *infptr, fitsfile *outfptr, int cpopt, int *status);

int CFITS_API ffgtmg(fitsfile *infptr, fitsfile *outfptr, int mgopt, int *status);

int CFITS_API ffgtcm(fitsfile *gfptr, int cmopt, int *status);

int CFITS_API ffgtvf(fitsfile *gfptr, long *firstfailed, int *status);

int CFITS_API ffgtop(fitsfile *mfptr,int group,fitsfile **gfptr,int *status);

int CFITS_API ffgtam(fitsfile *gfptr, fitsfile *mfptr, int hdupos, int *status);

int CFITS_API ffgtnm(fitsfile *gfptr, long *nmembers, int *status);

int CFITS_API ffgmng(fitsfile *mfptr, long *nmembers, int *status);

int CFITS_API ffgmop(fitsfile *gfptr, long member, fitsfile **mfptr, int *status);

int CFITS_API ffgmcp(fitsfile *gfptr, fitsfile *mfptr, long member, int cpopt, 
	   int *status);

int CFITS_API ffgmtf(fitsfile *infptr, fitsfile *outfptr,	long member, int tfopt,	       
	   int *status);

int CFITS_API ffgmrm(fitsfile *fptr, long member, int rmopt, int *status);


/*--------------------- group template parser routines ------------------*/

int CFITS_API fits_execute_template(fitsfile *ff, char *ngp_template, int *status);


int CFITS_API fits_img_stats_short(short *array,long nx, long ny, int nullcheck,   
    short nullvalue,long *ngoodpix, short *minvalue, short *maxvalue, double *mean,  
    double *sigma, double *noise1, double *noise2, double *noise3, double *noise5, int *status);

int CFITS_API fits_img_stats_int(int *array,long nx, long ny, int nullcheck,   
    int nullvalue,long *ngoodpix, int *minvalue, int *maxvalue, double *mean,  
    double *sigma, double *noise1, double *noise2, double *noise3, double *noise5, int *status);

int CFITS_API fits_img_stats_float(float *array, long nx, long ny, int nullcheck,   
    float nullvalue,long *ngoodpix, float *minvalue, float *maxvalue, double *mean,  
    double *sigma, double *noise1, double *noise2, double *noise3, double *noise5, int *status);


/*--------------------- image compression routines ------------------*/

int CFITS_API fits_set_compression_type(fitsfile *fptr, int ctype, int *status);

int CFITS_API fits_set_tile_dim(fitsfile *fptr, int ndim, long *dims, int *status);

int CFITS_API fits_set_noise_bits(fitsfile *fptr, int noisebits, int *status);

int CFITS_API fits_set_quantize_level(fitsfile *fptr, float qlevel, int *status);

int CFITS_API fits_set_hcomp_scale(fitsfile *fptr, float scale, int *status);

int CFITS_API fits_set_hcomp_smooth(fitsfile *fptr, int smooth, int *status);

int CFITS_API fits_set_quantize_method(fitsfile *fptr, int method, int *status);

int CFITS_API fits_set_quantize_dither(fitsfile *fptr, int dither, int *status);

int CFITS_API fits_set_dither_seed(fitsfile *fptr, int seed, int *status);

int CFITS_API fits_set_dither_offset(fitsfile *fptr, int offset, int *status);

int CFITS_API fits_set_lossy_int(fitsfile *fptr, int lossy_int, int *status);

int CFITS_API fits_set_huge_hdu(fitsfile *fptr, int huge, int *status);

int CFITS_API fits_set_compression_pref(fitsfile *infptr, fitsfile *outfptr, int *status);


int CFITS_API fits_get_compression_type(fitsfile *fptr, int *ctype, int *status);

int CFITS_API fits_get_tile_dim(fitsfile *fptr, int ndim, long *dims, int *status);

int CFITS_API fits_get_quantize_level(fitsfile *fptr, float *qlevel, int *status);

int CFITS_API fits_get_noise_bits(fitsfile *fptr, int *noisebits, int *status);

int CFITS_API fits_get_hcomp_scale(fitsfile *fptr, float *scale, int *status);

int CFITS_API fits_get_hcomp_smooth(fitsfile *fptr, int *smooth, int *status);

int CFITS_API fits_get_dither_seed(fitsfile *fptr, int *seed, int *status);


int CFITS_API fits_img_compress(fitsfile *infptr, fitsfile *outfptr, int *status);

int CFITS_API fits_is_compressed_image(fitsfile *fptr, int *status);

int CFITS_API fits_is_reentrant(void);

int CFITS_API fits_img_decompress_header(fitsfile *infptr, fitsfile *outfptr, int *status);

int CFITS_API fits_img_decompress (fitsfile *infptr, fitsfile *outfptr, int *status);


/* H-compress routines */
int CFITS_API fits_hcompress(int *a, int nx, int ny, int scale, char *output, 
    long *nbytes, int *status);

int CFITS_API fits_hcompress64(LONGLONG *a, int nx, int ny, int scale, char *output, 
    long *nbytes, int *status);

int CFITS_API fits_hdecompress(unsigned char *input, int smooth, int *a, int *nx, 
       int *ny, int *scale, int *status);

int CFITS_API fits_hdecompress64(unsigned char *input, int smooth, LONGLONG *a, int *nx, 
       int *ny, int *scale, int *status);


int CFITS_API fits_compress_table  (fitsfile *infptr, fitsfile *outfptr, int *status);

int CFITS_API fits_uncompress_table(fitsfile *infptr, fitsfile *outfptr, int *status);


void CFITS_API ffshdwn(int flag);

int CFITS_API ffgtmo(void);

int CFITS_API ffstmo(int sec, int *status);