src/wrapper.zig

pub const PixelFilter = extern struct {
    count: c_int = @import("std").mem.zeroes(c_int),
    path: [*c][*c]u8 = @import("std").mem.zeroes([*c][*c]u8),
    tag: [*c][*c]u8 = @import("std").mem.zeroes([*c][*c]u8),
    ifptr: [*c][*c]fitsfile = @import("std").mem.zeroes([*c][*c]fitsfile),
    expression: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    bitpix: c_int = @import("std").mem.zeroes(c_int),
    blank: c_long = @import("std").mem.zeroes(c_long),
    ofptr: [*c]fitsfile = @import("std").mem.zeroes([*c]fitsfile),
    keyword: [75]u8 = @import("std").mem.zeroes([75]u8),
    comment: [73]u8 = @import("std").mem.zeroes([73]u8),
};
pub extern fn fits_pixel_filter(filter: [*c]PixelFilter, status: [*c]c_int) c_int;
pub extern fn ffgtcr(fptr: [*c]fitsfile, grpname: [*c]u8, grouptype: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtis(fptr: [*c]fitsfile, grpname: [*c]u8, grouptype: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtch(gfptr: [*c]fitsfile, grouptype: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtrm(gfptr: [*c]fitsfile, rmopt: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtcp(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, cpopt: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtmg(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, mgopt: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtcm(gfptr: [*c]fitsfile, cmopt: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtvf(gfptr: [*c]fitsfile, firstfailed: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgtop(mfptr: [*c]fitsfile, group: c_int, gfptr: [*c][*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffgtam(gfptr: [*c]fitsfile, mfptr: [*c]fitsfile, hdupos: c_int, status: [*c]c_int) c_int;
pub extern fn ffgtnm(gfptr: [*c]fitsfile, nmembers: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgmng(mfptr: [*c]fitsfile, nmembers: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffgmop(gfptr: [*c]fitsfile, member: c_long, mfptr: [*c][*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffgmcp(gfptr: [*c]fitsfile, mfptr: [*c]fitsfile, member: c_long, cpopt: c_int, status: [*c]c_int) c_int;
pub extern fn ffgmtf(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, member: c_long, tfopt: c_int, status: [*c]c_int) c_int;
pub extern fn ffgmrm(fptr: [*c]fitsfile, member: c_long, rmopt: c_int, status: [*c]c_int) c_int;
pub extern fn fits_execute_template(ff: [*c]fitsfile, ngp_template: [*c]u8, status: [*c]c_int) c_int;
pub extern fn fits_img_stats_short(array: [*c]c_short, nx: c_long, ny: c_long, nullcheck: c_int, nullvalue: c_short, ngoodpix: [*c]c_long, minvalue: [*c]c_short, maxvalue: [*c]c_short, mean: [*c]f64, sigma: [*c]f64, noise1: [*c]f64, noise2: [*c]f64, noise3: [*c]f64, noise5: [*c]f64, status: [*c]c_int) c_int;
pub extern fn fits_img_stats_int(array: [*c]c_int, nx: c_long, ny: c_long, nullcheck: c_int, nullvalue: c_int, ngoodpix: [*c]c_long, minvalue: [*c]c_int, maxvalue: [*c]c_int, mean: [*c]f64, sigma: [*c]f64, noise1: [*c]f64, noise2: [*c]f64, noise3: [*c]f64, noise5: [*c]f64, status: [*c]c_int) c_int;
pub extern fn fits_img_stats_float(array: [*c]f32, nx: c_long, ny: c_long, nullcheck: c_int, nullvalue: f32, ngoodpix: [*c]c_long, minvalue: [*c]f32, maxvalue: [*c]f32, mean: [*c]f64, sigma: [*c]f64, noise1: [*c]f64, noise2: [*c]f64, noise3: [*c]f64, noise5: [*c]f64, status: [*c]c_int) c_int;
pub extern fn fits_set_compression_type(fptr: [*c]fitsfile, ctype: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_tile_dim(fptr: [*c]fitsfile, ndim: c_int, dims: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn fits_set_noise_bits(fptr: [*c]fitsfile, noisebits: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_quantize_level(fptr: [*c]fitsfile, qlevel: f32, status: [*c]c_int) c_int;
pub extern fn fits_set_hcomp_scale(fptr: [*c]fitsfile, scale: f32, status: [*c]c_int) c_int;
pub extern fn fits_set_hcomp_smooth(fptr: [*c]fitsfile, smooth: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_quantize_method(fptr: [*c]fitsfile, method: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_quantize_dither(fptr: [*c]fitsfile, dither: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_dither_seed(fptr: [*c]fitsfile, seed: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_dither_offset(fptr: [*c]fitsfile, offset: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_lossy_int(fptr: [*c]fitsfile, lossy_int: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_huge_hdu(fptr: [*c]fitsfile, huge: c_int, status: [*c]c_int) c_int;
pub extern fn fits_set_compression_pref(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_get_compression_type(fptr: [*c]fitsfile, ctype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_get_tile_dim(fptr: [*c]fitsfile, ndim: c_int, dims: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn fits_get_quantize_level(fptr: [*c]fitsfile, qlevel: [*c]f32, status: [*c]c_int) c_int;
pub extern fn fits_get_noise_bits(fptr: [*c]fitsfile, noisebits: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_get_hcomp_scale(fptr: [*c]fitsfile, scale: [*c]f32, status: [*c]c_int) c_int;
pub extern fn fits_get_hcomp_smooth(fptr: [*c]fitsfile, smooth: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_get_dither_seed(fptr: [*c]fitsfile, seed: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_img_compress(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_comp_img(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, compress_type: c_int, tilesize: [*c]c_long, parm1: c_int, parm2: c_int, status: [*c]c_int) c_int;
pub extern fn fits_is_compressed_image(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_is_reentrant() c_int;
pub extern fn fits_decomp_img(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_img_decompress_header(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_img_decompress(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_hcompress(a: [*c]c_int, nx: c_int, ny: c_int, scale: c_int, output: [*c]u8, nbytes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn fits_hcompress64(a: [*c]LONGLONG, nx: c_int, ny: c_int, scale: c_int, output: [*c]u8, nbytes: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn fits_hdecompress(input: [*c]u8, smooth: c_int, a: [*c]c_int, nx: [*c]c_int, ny: [*c]c_int, scale: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_hdecompress64(input: [*c]u8, smooth: c_int, a: [*c]LONGLONG, nx: [*c]c_int, ny: [*c]c_int, scale: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_compress_table(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn fits_uncompress_table(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffihtps() c_int;
pub extern fn ffchtps() c_int;
pub extern fn ffvhtps(flag: c_int) void;
pub extern fn ffshdwn(flag: c_int) void;
pub extern fn ffgtmo() c_int;
pub extern fn ffstmo(sec: c_int, status: [*c]c_int) c_int;
pub const __llvm__ = @as(c_int, 1);
pub const __clang__ = @as(c_int, 1);
pub const __clang_major__ = @as(c_int, 18);
pub const __clang_minor__ = @as(c_int, 1);
pub const __clang_patchlevel__ = @as(c_int, 6);
pub const __clang_version__ = "18.1.6 (https://github.com/ziglang/zig-bootstrap 98bc6bf4fc4009888d33941daf6b600d20a42a56)";
pub const __GNUC__ = @as(c_int, 4);
pub const __GNUC_MINOR__ = @as(c_int, 2);
pub const __GNUC_PATCHLEVEL__ = @as(c_int, 1);
pub const __GXX_ABI_VERSION = @as(c_int, 1002);
pub const __ATOMIC_RELAXED = @as(c_int, 0);
pub const __ATOMIC_CONSUME = @as(c_int, 1);
pub const __ATOMIC_ACQUIRE = @as(c_int, 2);
pub const __ATOMIC_RELEASE = @as(c_int, 3);
pub const __ATOMIC_ACQ_REL = @as(c_int, 4);
pub const __ATOMIC_SEQ_CST = @as(c_int, 5);
pub const __MEMORY_SCOPE_SYSTEM = @as(c_int, 0);
pub const __MEMORY_SCOPE_DEVICE = @as(c_int, 1);
pub const __MEMORY_SCOPE_WRKGRP = @as(c_int, 2);
pub const __MEMORY_SCOPE_WVFRNT = @as(c_int, 3);
pub const __MEMORY_SCOPE_SINGLE = @as(c_int, 4);
pub const __OPENCL_MEMORY_SCOPE_WORK_ITEM = @as(c_int, 0);
pub const __OPENCL_MEMORY_SCOPE_WORK_GROUP = @as(c_int, 1);
pub const __OPENCL_MEMORY_SCOPE_DEVICE = @as(c_int, 2);
pub const __OPENCL_MEMORY_SCOPE_ALL_SVM_DEVICES = @as(c_int, 3);
pub const __OPENCL_MEMORY_SCOPE_SUB_GROUP = @as(c_int, 4);
pub const __FPCLASS_SNAN = @as(c_int, 0x0001);
pub const __FPCLASS_QNAN = @as(c_int, 0x0002);
pub const __FPCLASS_NEGINF = @as(c_int, 0x0004);
pub const __FPCLASS_NEGNORMAL = @as(c_int, 0x0008);
pub const __FPCLASS_NEGSUBNORMAL = @as(c_int, 0x0010);
pub const __FPCLASS_NEGZERO = @as(c_int, 0x0020);
pub const __FPCLASS_POSZERO = @as(c_int, 0x0040);
pub const __FPCLASS_POSSUBNORMAL = @as(c_int, 0x0080);
pub const __FPCLASS_POSNORMAL = @as(c_int, 0x0100);
pub const __FPCLASS_POSINF = @as(c_int, 0x0200);
pub const __PRAGMA_REDEFINE_EXTNAME = @as(c_int, 1);
pub const __VERSION__ = "Clang 18.1.6 (https://github.com/ziglang/zig-bootstrap 98bc6bf4fc4009888d33941daf6b600d20a42a56)";
pub const __OBJC_BOOL_IS_BOOL = @as(c_int, 0);
pub const __CONSTANT_CFSTRINGS__ = @as(c_int, 1);
pub const __SEH__ = @as(c_int, 1);
pub const __clang_literal_encoding__ = "UTF-8";
pub const __clang_wide_literal_encoding__ = "UTF-16";
pub const __ORDER_LITTLE_ENDIAN__ = @as(c_int, 1234);
pub const __ORDER_BIG_ENDIAN__ = @as(c_int, 4321);
pub const __ORDER_PDP_ENDIAN__ = @as(c_int, 3412);
pub const __BYTE_ORDER__ = __ORDER_LITTLE_ENDIAN__;
pub const __LITTLE_ENDIAN__ = @as(c_int, 1);
pub const __CHAR_BIT__ = @as(c_int, 8);
pub const __BOOL_WIDTH__ = @as(c_int, 8);
pub const __SHRT_WIDTH__ = @as(c_int, 16);
pub const __INT_WIDTH__ = @as(c_int, 32);
pub const __LONG_WIDTH__ = @as(c_int, 32);
pub const __LLONG_WIDTH__ = @as(c_int, 64);
pub const __BITINT_MAXWIDTH__ = @import("std").zig.c_translation.promoteIntLiteral(c_int, 8388608, .decimal);
pub const __SCHAR_MAX__ = @as(c_int, 127);
pub const __SHRT_MAX__ = @as(c_int, 32767);
pub const __INT_MAX__ = @import("std").zig.c_translation.promoteIntLiteral(c_int, 2147483647, .decimal);
pub const __LONG_MAX__ = @as(c_long, 2147483647);
pub const __LONG_LONG_MAX__ = @as(c_longlong, 9223372036854775807);
pub const __WCHAR_MAX__ = @import("std").zig.c_translation.promoteIntLiteral(c_int, 65535, .decimal);
pub const __WCHAR_WIDTH__ = @as(c_int, 16);
pub const __WINT_MAX__ = @import("std").zig.c_translation.promoteIntLiteral(c_int, 65535, .decimal);
pub const __WINT_WIDTH__ = @as(c_int, 16);
pub const __INTMAX_MAX__ = @as(c_longlong, 9223372036854775807);
pub const __INTMAX_WIDTH__ = @as(c_int, 64);
pub const __SIZE_MAX__ = @as(c_ulonglong, 18446744073709551615);
pub const __SIZE_WIDTH__ = @as(c_int, 64);
pub const __UINTMAX_MAX__ = @as(c_ulonglong, 18446744073709551615);
pub const __UINTMAX_WIDTH__ = @as(c_int, 64);
pub const __PTRDIFF_MAX__ = @as(c_longlong, 9223372036854775807);
pub const __PTRDIFF_WIDTH__ = @as(c_int, 64);
pub const __INTPTR_MAX__ = @as(c_longlong, 9223372036854775807);
pub const __INTPTR_WIDTH__ = @as(c_int, 64);
pub const __UINTPTR_MAX__ = @as(c_ulonglong, 18446744073709551615);
pub const __UINTPTR_WIDTH__ = @as(c_int, 64);
pub const __SIZEOF_DOUBLE__ = @as(c_int, 8);
pub const __SIZEOF_FLOAT__ = @as(c_int, 4);
pub const __SIZEOF_INT__ = @as(c_int, 4);
pub const __SIZEOF_LONG__ = @as(c_int, 4);
pub const __SIZEOF_LONG_DOUBLE__ = @as(c_int, 16);
pub const __SIZEOF_LONG_LONG__ = @as(c_int, 8);
pub const __SIZEOF_POINTER__ = @as(c_int, 8);
pub const __SIZEOF_SHORT__ = @as(c_int, 2);
pub const __SIZEOF_PTRDIFF_T__ = @as(c_int, 8);
pub const __SIZEOF_SIZE_T__ = @as(c_int, 8);
pub const __SIZEOF_WCHAR_T__ = @as(c_int, 2);
pub const __SIZEOF_WINT_T__ = @as(c_int, 2);
pub const __SIZEOF_INT128__ = @as(c_int, 16);
pub const __INTMAX_TYPE__ = c_longlong;
pub const __INTMAX_FMTd__ = "lld";
pub const __INTMAX_FMTi__ = "lli";
